--- a/css/layout.css
+++ b/css/layout.css
@@ -60,7 +60,7 @@
 */
 
 .layout__content {
-  overflow-y: auto; /* Vertikales Scrollen erlauben */
+  overflow-y: auto !important; /* Vertikales Scrollen erzwingen */
   overflow-x: hidden; /* Horizontales Scrollen verhindern */
   position: absolute;
   top: 3.8rem;
@@ -71,6 +71,7 @@
   padding-bottom: 1rem;
   padding-top: 1rem;
   margin: 0 0.5rem;
+  height: calc(100vh - 7rem); /* Explizite Höhe für Scrolling */
   mask-image:
     linear-gradient(
       to bottom,
